Fixed Edit Product and injected Interfaces in all razor-pages

--- a/AutomateWarehouse/Pages/CustomerPage.razor
+++ b/AutomateWarehouse/Pages/CustomerPage.razor
@@ -1,6 +1,7 @@
 ﻿@page "/allCustomers"
 @using AutomateWarehouse.Data
-@inject CustomerRepository customerRepo
+@*@inject CustomerRepository customerRepo*@
+@inject ICustomerRepository customerRepo
 
 <h3>All customers</h3>
 
