--- a/AutomateWarehouse/Pages/Products.razor
+++ b/AutomateWarehouse/Pages/Products.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Products"
 @using AutomateWarehouse.Data
-@inject ProductRepository productRepository
+@*@inject ProductRepository productRepository*@
+@inject IProductRepository productRepository
 
 <h3>Products</h3>
 
@@ -9,7 +10,7 @@
 
         <div class="col-5.5 bg-light m-2 justify-content-start">
             <div class="p-3 mb-3 bg-secondary text-white text-center">
-                Add new Customer
+                Add new Product
             </div>
             <EditForm Model="@newProduct" OnValidSubmit="@AddNewProduct">
                 <DataAnnotationsValidator />
@@ -48,7 +49,7 @@
                 <DataAnnotationsValidator />
                 <ValidationSummary />
                 <div class="p-3 mb-3 bg-secondary text-white text-center">
-                    Edit Customer
+                    Edit Product
                 </div>
                 <div class="p-3 mb-3 bg-secondary text-white text-center">
                     <div class="form-group ">
@@ -163,7 +164,7 @@
 
     private void SetProductForUpdate(Product selected)
     {
-        updatedProduct = selected;
+        updateProduct = selected;
     }
     private async Task EditProduct()
     {
