--- a/AutomateWarehouse/Pages/Orders.razor
+++ b/AutomateWarehouse/Pages/Orders.razor
@@ -3,13 +3,12 @@
 @inject OrderRepository orderRepo
 @inject OrderLineRepository orderLineRepo
 @inject ProductRepository productRepo
-@inject CustomerRepository customerRepo 
+@inject CustomerRepository customerRepo
 
 
-<h3>All orders</h3>
+<h3>Orders</h3>
 
 <div class="container">
-
     <table class="table table-bordered">
         <thead class="thead-dark">
             <tr>
@@ -32,10 +31,28 @@
                         <td>@order.CustomerId</td>
                         <td>@order.OrderDate</td>
                         <td>@order.DeliveryAddress</td>
-                        <td>@order.PaymentCompleted</td>
-                        <td>@order.Dispatched</td>
+                        <td>
+                            @if (order.PaymentCompleted == true)
+                            {
+                                <p>Paid</p>
+                            }
+                            else
+                            {
+                                <p>Not paid</p>
+                            }
+                        </td>
+                        <td>
+                            @if (@order.Dispatched == true)
+                            {
+                                <p>Dispatched</p>
+                            }
+                            else
+                            {
+                                <p>Not dispatched</p>
+                            }
+                        </td>
                         <td><button class="btn btn-info" @onclick="(() => ShowAllOrderLines(order))">Show order lines</button></td>
-                        <td><button class="btn btn-info">Edit</button></td>
+                        <td><button class="btn btn-info" @onclick="(() => SetOrderForEdit (order))">Edit</button></td>
                         <td>
                             <input type="button" name="PayButton" class="btn btn-info" id="PayButton" value="Pay" @onclick="(() => PayOrderAsync(order))" />
                         </td>
@@ -93,234 +110,164 @@
         </tbody>
     </table>
 
-    <button class="btn btn-info" @onclick="(() => GetAllDispatchedOrdersAsync())">Show all orders</button>
-
+    <button class="btn btn-info" @onclick="(() => GetAllOrdersAsync())">Show all orders</button>
     <button class="btn btn-info" @onclick="(() => GetAllDispatchedOrdersAsync())">Show all dispatched orders</button>
-
     <button class="btn btn-info" @onclick="(() => GetAllPendingdOrdersAsync())">Show all pending orders</button>
-
-    <button class="btn btn-info">Process all orders</button>
-</div>
-
-
-<div class="row m-5">
-    <div class="col-5 bg-light m-2 justify-content-start">
-        <div class="p-3 mb-3 bg-primary text-white text-center">
-            Create new Order
-        </div>
-        <EditForm Model="@newOrder" OnValidSubmit="@AddNewOrder">
-            <DataAnnotationsValidator />
-            <ValidationSummary />
-            <div class="form-group">
-                @*Binder respektive värde nedanför till objektet newOrder*@
-                <div class="form-group">
-                    <label for="dept">Products</label>
-                    <select type="type" id="prod" class="form-control select-picker" @bind="@newOrderLine.ProductId">
-                        <option value="">Pick product</option>
-                        @foreach (var prod in products)
-                        {
-                            <option value="@prod.Id">@prod.Name</option>
-                        }
-                    </select>
+    <button class="btn btn-info" @onclick="(() => DispatchAllOrders())">Process all orders</button>
+    <div class="row m-2">
+            <div class="col-5 bg-light m-2 justify-content-start">
+                <div class="p-3 mb-3 bg-secondary text-white text-center">
+                    Create new Order
                 </div>
-
-                <label for="quant">Quantity</label>
-                <input type="type" id="quant" class="form-control" @bind-value="@newOrderLine.Quantity" />
-
-                <div class="text-center p-3 mb-3">
-                    <button class="btn btn-info" type="submit" @*@onclick="(() => AddNewOrder())" *@>Add product</button>
-                </div>
-
-
-                <table class="table table-bordered">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>Product</th>
-                            <th>Quantity</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @if (orderLines.Any())
-                        {
-                            @foreach (var ordLin in orderLines)
+                <EditForm Model="@newOrder" OnValidSubmit="(() => AddNewOrder())">
+                    <DataAnnotationsValidator />
+                    <ValidationSummary />
+                    <div class="form-group">
+                        @*Binder respektive värde nedanför till objektet updateOrder*@
+                        <label for="ord">Pick customer</label>
+                        <select type="type" id="ord" class="form-control select-picker" @bind="@newOrder.CustomerId">
+                            @foreach (var cust in customers)
                             {
-                                <tr>
-                                    <td>@ordLin.Product.Name</td>
-                                    <td>@ordLin.Quantity</td>
-                                </tr>
+                                <option value="@cust.Id">@cust.Name</option>
                             }
-                        }
-                    </tbody>
-                </table>
+                        </select>
+                        <br>
+                        <label for="address">Delivery address</label>
+                        <input type="type" id="address" class="form-control" @bind-value="@newOrder.DeliveryAddress" />
+                        <br>
+                        <button class="btn btn-info" type="submit">
+                            Add Order
+                        </button>
+                    </div>
+                </EditForm>
             </div>
-
-            <div class="form-group">
-                @*Binder respektive värde nedanför till objektet updateOrder*@
-                <label for="name">Name</label>
-                <input type="type" id="name" class="form-control" @*@bind-value="@newOrder.Name" *@ />
+        <div class="col-5 bg-light m-2 justify-content-start">
+            <div class="p-3 mb-3 bg-secondary text-white text-center">
+                Edit Order
             </div>
+            <EditForm Model="@updateOrder" OnValidSubmit="(() => EditOrder())">
+                <DataAnnotationsValidator />
+                <ValidationSummary />
+                <div class="form-group">
+                    @*Binder respektive värde nedanför till objektet updateOrder*@
+                    <label for="deliveryAddress">Delivery address</label>
+                    <input type="type" id="deliveryAddress" class="form-control" @bind-value="@updateOrder.DeliveryAddress" />
+                </div>
+                <div class="text-center p-3 mb-3">
+                    <button class="btn btn-info" type="submit">Edit Customer</button>
+                </div>
+                    @if (updateOrder.PaymentCompleted)
+                    {
+                        <button class="btn btn-info" @onclick="(() => UndoPayment(updateOrder))">Undo payment</button>
+                    }
 
-            <label for="name">Address</label>
-            <input type="type" id="Address" class="form-control" @bind-value="@newOrder.DeliveryAddress" />
-            <br>
-            <div class="text-center p-3 mb-3">
-                <button class="btn btn-info" type="submit" @onclick="(() => AddNewOrder())">Create Order</button>
-            </div>
-
-        </EditForm>
+                    @if (updateOrder.Dispatched)
+                    {
+                        <button class="btn btn-info" @onclick="(() => UndoDispatch(updateOrder))">Undo dispatch</button>
+                    }
+            </EditForm>
+        </div>
     </div>
 </div>
 
 
+    @code {
+        private List<Order> orders;
+        //private List<Order> ordersDispatched = new List<Order>();
+        //private List<Order> ordersPending = new List<Order>();
+        private List<OrderLine> orderLines = new List<OrderLine>();
+        private List<Customer> customers;
+        private List<Product> products;
 
+        private Order currentOrder = new Order();
+        //private List<OrderLine> orderLines;
+        private List<Product> ListOfProducts;
+        private List<Customer> ListOfCustomers;
 
+        Order newOrder = new Order();
+        Order updateOrder = new Order();
+        bool checkedValue = false;
 
-@*<div class="container">
-        @if (ordersDispatched.Any())
+        OrderLine newOrderLine = new OrderLine();
+
+        protected override async Task OnInitializedAsync()
         {
-            <table class="table table-bordered">
-                <thead class="thead-dark">
-                    <tr>
-                        <th>Customer id</th>
-                        <th>Order date</th>
-                        <th>Delivery address</th>
-                        <th>Payment completed</th>
-                        <th>Order dispatched</th>
-                        <th>Edit order</th>
-                        <th>Pay order</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var orde in ordersDispatched)
-                    {
-                        <tr>
-                            <td>@orde.CustomerId</td>
-                            <td>@orde.OrderDate</td>
-                            <td>@orde.DeliveryAddress</td>
-                            <td>@orde.PaymentCompleted</td>
-                            <td>@orde.Dispatched</td>
-                            <td><button class="btn btn-info">Edit</button></td>
-                            <td>
-                                <input type="checkbox" onchange="document.getElementById('PayButton').disabled = !this.checked;" />
-                                <input type="button" name="PayButton" class="btn btn-info" id="PayButton" value="PayButton" disabled @onclick="(() => PayOrderAsync(orde))" />
-                            </td>
-                        </tr>
-                    }
-                    }
-                </tbody>
-            </table>
+            orders = await orderRepo.GetAllOrdersAsync();
+            customers = await customerRepo.GetCustomerAsync();
+            products = await productRepo.GetAllProductsAsync();
         }
-    </div>*@
 
-@*<div class="container">
-        @if (ordersPending.Any())
+        private async Task AddNewOrder()
         {
-            <table class="table table-bordered">
-                <thead class="thead-dark">
-                    <tr>
-                        <th>Customer id</th>
-                        <th>Order date</th>
-                        <th>Delivery address</th>
-                        <th>Payment completed</th>
-                        <th>Order dispatched</th>
-                        <th>Edit order</th>
-                        <th>Pay order</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var orde in ordersPending)
-                    {
-                        <tr>
-                            <td>@orde.CustomerId</td>
-                            <td>@orde.OrderDate</td>
-                            <td>@orde.DeliveryAddress</td>
-                            <td>@orde.PaymentCompleted</td>
-                            <td>@orde.Dispatched</td>
-                            <td><button class="btn btn-info">Edit</button></td>
-                            <td>
-                                <input type="checkbox" onchange="document.getElementById('PayButton').disabled = !this.checked;" />
-                                <input type="button" name="PayButton" class="btn btn-info" id="PayButton" value="PayButton" disabled @onclick="(() => PayOrderAsync(orde))" />
-                            </td>
-                        </tr>
-                    }
-
-                </tbody>
-            </table>
+            await orderRepo.AddNewOrderAsync(newOrder);
+            newOrder = new Order();
+            await UpdateGUI();
         }
-    </div>*@
+
+        private async Task EditOrder()
+        {
+            await orderRepo.EditOrderAsync(updateOrder);
+            updateOrder = new Order();
+        }
+
+        private void SetOrderForEdit(Order selected)
+        {
+            updateOrder = selected;
+        }
+
+        private async Task PayOrderAsync(Order order)
+        {
+            await orderRepo.PayOrderAsync(order);
+            await UpdateGUI();
+        }
+
+        private async Task UndoPayment(Order order)
+        {
+            await orderRepo.UndoPaymentAsync(order);
+            await UpdateGUI();
+        }
+
+        private async Task UndoDispatch(Order order)
+        {
+            await orderRepo.UndoDispatchAsync(order);
+            await UpdateGUI();
+        }
+
+        private async Task DispatchAllOrders()
+        {
+            await orderRepo.ProcessOrderAsync();
+            await UpdateGUI();
+        }
+
+        private async Task GetAllOrdersAsync()
+        {
+            orders = await orderRepo.GetAllOrdersAsync();
+        }
+
+        private async Task GetAllDispatchedOrdersAsync()
+        {
+            orders = await orderRepo.GetAllDispatchedOrdersAsync();
+        }
+
+        private async Task GetAllPendingdOrdersAsync()
+        {
+            orders = await orderRepo.GetAllPendingOrdersAsync();
+        }
+
+        protected async Task UpdateGUI()
+        {
+            orders = await orderRepo.GetAllOrdersAsync();
+        }
 
 
+        private async Task ShowAllOrderLines(Order selectedOrder)
+        {
+            currentOrder = selectedOrder;
+            orderLines = await orderLineRepo.GetCurrentOrderLinesAsync(currentOrder);
+            ListOfProducts = await productRepo.GetAllProductsAsync();
+            ListOfCustomers = await customerRepo.GetCustomerAsync();
+            //await UpdateGUI();
+        }
 
-@code {
-    private List<Order> orders;
-    private List<Order> ordersDispatched = new List<Order>();
-    private List<Order> ordersPending = new List<Order>();
-    private List<OrderLine> orderLines = new List<OrderLine>();
-    private List<Customer> customers;
-    private List<Product> products;
 
-    private Order currentOrder = new Order();
-    //private List<OrderLine> orderLines;
-    private List<Product> ListOfProducts;
-    private List<Customer> ListOfCustomers;
-
-    Order newOrder = new Order();
-    Order updateOrder = new Order();
-    bool checkedValue = false;
-
-    OrderLine newOrderLine = new OrderLine();
-
-    protected override async Task OnInitializedAsync()
-    {
-        orders = await orderRepo.GetAllOrdersAsync();
-        customers = await customerRepo.GetCustomerAsync();
-        products = await productRepo.GetAllProductsAsync();
     }
-
-    private async Task AddNewOrder()
-    {
-        newOrder.OrderDate = DateTime.Now;
-
-        await orderRepo.AddNewOrderAsync(newOrder);
-        await UpdateGUI();
-    }
-
-    private async Task EditOrder()
-    {
-
-    }
-
-
-    private async Task PayOrderAsync(Order order)
-    {
-        await orderRepo.PayOrderAsync(order);
-        await UpdateGUI();
-    }
-
-    private async Task GetAllDispatchedOrdersAsync()
-    {
-        ordersDispatched = await orderRepo.GetAllDispatchedOrdersAsync();
-    }
-
-    private async Task GetAllPendingdOrdersAsync()
-    {
-        ordersPending = await orderRepo.GetAllPendingOrdersAsync();
-    }
-
-    protected async Task UpdateGUI()
-    {
-        orders = await orderRepo.GetAllOrdersAsync();
-    }
-
-
-    private async Task ShowAllOrderLines(Order selectedOrder)
-    {
-        currentOrder = selectedOrder;
-        orderLines = await orderLineRepo.GetCurrentOrderLinesAsync(currentOrder);
-        ListOfProducts = await productRepo.GetAllProductsAsync();
-        ListOfCustomers = await customerRepo.GetCustomerAsync();
-        //await UpdateGUI();
-    }
-
-
-}
