--- a/AutomateWarehouse/Pages/CustomerPage.razor
+++ b/AutomateWarehouse/Pages/CustomerPage.razor
@@ -5,33 +5,34 @@
 
 <h3>All customers</h3>
 
-<div class="container">
+@if (customers.Any())
+{
+  <div class="container">
 
-  <table class="table table-bordered">
-    <thead class="thead-dark">
-      <tr>
-        <th>Name</th>
-        <th>Phone</th>
-        <th>Email</th>
-        <th>Show Dispatched orders</th>
-        <th>Show Active orders</th>
-        <th>Delete Customer</th>
-        <th>Edit Customer</th>
-      </tr>
-    </thead>
-    <tbody>
-      @if (customers.Any())
-      {
+    <table class="table table-bordered">
+      <thead class="thead-dark">
+        <tr>
+          <th>Name</th>
+          <th>Phone</th>
+          <th>Email</th>
+          <th>Show Dispatched orders</th>
+          <th>Show Active orders</th>
+          <th>Delete Customer</th>
+          <th>Edit Customer</th>
+        </tr>
+      </thead>
+      <tbody>
+
         @foreach (var cust in customers)
         {
           <tr>
             <td>@cust.Name</td>
             <td>@cust.Phone</td>
             <td>@cust.Email</td>
-            <td><button class="btn btn-info" @onclick="(() => SetCustomerForDispatchedOrders ( cust ))">Dispatched orders </button></td>
-            <td><button class="btn btn-info" @onclick="(() => SetCustomerForActiveOrders ( cust ))">Active orders</button></td>
+            <td><button class="btn btn-info" @onclick="(() => SetCustomerForDispatchedOrders(cust))">Dispatched orders </button></td>
+            <td><button class="btn btn-info" @onclick="(() => SetCustomerForActiveOrders(cust))">Active orders</button></td>
             <td><button class="btn btn-danger" @onclick="(() => DeleteCustomer(cust))">Delete</button></td>
-            <td><button class="btn btn-info" @onclick="(() => SetCustomerForEdit ( cust ))">Edit</button></td>
+            <td><button class="btn btn-info" @onclick="(() => SetCustomerForEdit(cust))">Edit</button></td>
           </tr>
           <tr>
 
@@ -149,145 +150,165 @@
               }
               else if (ActiveCustomer.Id == cust.Id)
               {
-                <td colspan="7" align="center"><p>No active orders found</p></td>                
+                <td colspan="7" align="center"><p>No active orders found</p></td>
+
               }
             }
 
           </tr>
         }
-      }
-    </tbody>
-  </table>
 
-  <div class="row m-5">
-    <div class="col-5 bg-light m-2 justify-content-start">
-      <div class="p-3 mb-3 bg-secondary text-white text-center">
-        Add new Customer
+      </tbody>
+    </table>
+
+
+    <div class="row m-5">
+      <div class="col-5 bg-light m-2 justify-content-start">
+        <div class="p-3 mb-3 bg-secondary text-white text-center">
+          Add new Customer
+        </div>
+        <EditForm Model="@NewCustomer" OnValidSubmit="@AddNewCustomer">
+          <DataAnnotationsValidator />
+          <ValidationSummary />
+          <div class="form-group">
+            @*Binder respektive värde nedanför till objektet NewEmployee*@
+            <label for="name">Name</label>
+            <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Name" />
+          </div>
+          <div class="form-group">
+            <label for="phone">Phone</label>
+            <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Phone" />
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Email" />
+          </div>
+
+          <div class="text-center p-3 mb-3">
+            <button class="btn btn-info" type="submit">Add Customer</button>
+          </div>
+        </EditForm>
       </div>
-      <EditForm Model="@NewCustomer" OnValidSubmit="@AddNewCustomer">
-        <DataAnnotationsValidator />
-        <ValidationSummary />
-        <div class="form-group">
-          @*Binder respektive värde nedanför till objektet NewEmployee*@
-          <label for="name">Name</label>
-          <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Name" />
+      <div class="col-5 bg-light m-2 justify-content-start">
+        <div class="p-3 mb-3 bg-secondary text-white text-center">
+          Edit Customer
         </div>
-        <div class="form-group">
-          <label for="phone">Phone</label>
-          <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Phone" />
-        </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Email" />
-        </div>
+        <EditForm Model="@UpdateCustomer" OnValidSubmit="(() => EditCustomer())">
+          <DataAnnotationsValidator />
+          <ValidationSummary />
+          <div class="form-group">
+            @*Binder respektive värde nedanför till objektet NewEmployee*@
+            <label for="name">Name</label>
+            <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Name" />
+          </div>
+          <div class="form-group">
+            <label for="phone">Phone</label>
+            <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Phone" />
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Email" />
+          </div>
 
-        <div class="text-center p-3 mb-3">
-          <button class="btn btn-info" type="submit">Add Customer</button>
-        </div>
-      </EditForm>
-    </div>
-    <div class="col-5 bg-light m-2 justify-content-start">
-      <div class="p-3 mb-3 bg-secondary text-white text-center">
-        Edit Customer
+          <div class="text-center p-3 mb-3">
+            <button class="btn btn-info" type="submit">Edit Customer</button>
+          </div>
+        </EditForm>
       </div>
-      <EditForm Model="@UpdateCustomer" OnValidSubmit="(() => EditCustomer())">
-        <DataAnnotationsValidator />
-        <ValidationSummary />
-        <div class="form-group">
-          @*Binder respektive värde nedanför till objektet NewEmployee*@
-          <label for="name">Name</label>
-          <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Name" />
-        </div>
-        <div class="form-group">
-          <label for="phone">Phone</label>
-          <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Phone" />
-        </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Email" />
-        </div>
-
-        <div class="text-center p-3 mb-3">
-          <button class="btn btn-info" type="submit">Edit Customer</button>
-        </div>
-      </EditForm>
     </div>
+
+    <div class="row m-5">
+
+    </div>
+
   </div>
+}
+else if (loadFailed)
+{
+  <h3>Sorry, something went wrong when loading customers.</h3>
+}
+else
+{
+  <h3>Loading...</h3>
+}
 
-  <div class="row m-5">
-   
-  </div>
+@code {
+  private List<Customer> customers;
+  private List<Order> dispatchedOrders;
+  private List<Order> activeOrders;
+  private bool loadFailed;
+  Customer NewCustomer = new Customer();
+  Customer UpdateCustomer = new Customer();
+  Customer DispatchedCustomer = new Customer();
+  Customer ActiveCustomer = new Customer();
 
-</div> 
+  protected override async Task OnInitializedAsync()
+  {
+    customers = await customerRepo.GetCustomerAsync();
+  }
 
-  @code {
-    private List<Customer> customers;
-    private List<Order> dispatchedOrders;
-    private List<Order> activeOrders;
-    Customer NewCustomer = new Customer();
-    Customer UpdateCustomer = new Customer();
-    Customer DispatchedCustomer = new Customer();
-    Customer ActiveCustomer = new Customer();
-
-    protected override async Task OnInitializedAsync()
+  //Add a new Cutomer by calling the repository. Create a new object wo erase the old.
+  private async Task AddNewCustomer()
+  {
+    try
     {
-      customers = await customerRepo.GetCustomerAsync();
-    }
-
-    //Add a new Cutomer by calling the repository. Create a new object wo erase the old.
-    private async Task AddNewCustomer()
-    {
+      loadFailed = false;
       await customerRepo.AddCustomerAsync(NewCustomer);
       NewCustomer = new Customer();
       await UpdateGUI();
     }
-
-    //Delete a customer by calling method in repository.
-    private async Task DeleteCustomer(Customer customer)
+    catch (Exception ex)
     {
-      await customerRepo.DeleteCustomerAsync(customer);
-      await UpdateGUI();
-    }
-
-    private void SetCustomerForEdit(Customer selected)
-    {
-      UpdateCustomer = selected;
-    }
-    //Edit a customer by calling method in repository.
-    private async Task EditCustomer()
-    {
-      await customerRepo.EditCustomerAsync(UpdateCustomer);
-      UpdateCustomer = new Customer();
-      await UpdateGUI();
-    }
-
-    public async Task SetCustomerForDispatchedOrders(Customer selected)
-    {
-      if(activeOrders != null)
-      {
-        activeOrders.Clear();
-      }
-      ActiveCustomer = new Customer();
-      DispatchedCustomer = selected;
-      dispatchedOrders = await customerRepo.ShowDispatchedOrdersByCustomer(DispatchedCustomer);
-      await UpdateGUI();
-    }
-
-    public async Task SetCustomerForActiveOrders(Customer selected)
-    {
-      if(dispatchedOrders != null)
-      {
-        dispatchedOrders.Clear();
-      }
-      DispatchedCustomer = new Customer();
-      ActiveCustomer = selected;
-      activeOrders = await customerRepo.ShowActiveOrdersByCustomer(ActiveCustomer);
-      await UpdateGUI();
-    }
-
-    //To update the GUI by fetching from database async.
-    private async Task UpdateGUI()
-    {
-      customers = await customerRepo.GetCustomerAsync();
+      loadFailed = true;
     }
   }
+
+  //Delete a customer by calling method in repository.
+  private async Task DeleteCustomer(Customer customer)
+  {
+    await customerRepo.DeleteCustomerAsync(customer);
+    await UpdateGUI();
+  }
+
+  private void SetCustomerForEdit(Customer selected)
+  {
+    UpdateCustomer = selected;
+  }
+  //Edit a customer by calling method in repository.
+  private async Task EditCustomer()
+  {
+    await customerRepo.EditCustomerAsync(UpdateCustomer);
+    UpdateCustomer = new Customer();
+    await UpdateGUI();
+  }
+
+  public async Task SetCustomerForDispatchedOrders(Customer selected)
+  {
+    if (activeOrders != null)
+    {
+      activeOrders.Clear();
+    }
+    ActiveCustomer = new Customer();
+    DispatchedCustomer = selected;
+    dispatchedOrders = await customerRepo.ShowDispatchedOrdersByCustomer(DispatchedCustomer);
+    await UpdateGUI();
+  }
+
+  public async Task SetCustomerForActiveOrders(Customer selected)
+  {
+    if (dispatchedOrders != null)
+    {
+      dispatchedOrders.Clear();
+    }
+    DispatchedCustomer = new Customer();
+    ActiveCustomer = selected;
+    activeOrders = await customerRepo.ShowActiveOrdersByCustomer(ActiveCustomer);
+    await UpdateGUI();
+  }
+
+  //To update the GUI by fetching from database async.
+  private async Task UpdateGUI()
+  {
+    customers = await customerRepo.GetCustomerAsync();
+  }
+}
