--- a/AutomateWarehouse/Pages/Index.razor
+++ b/AutomateWarehouse/Pages/Index.razor
@@ -1,7 +1,9 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Warehouse Automation</h1>
 
-Welcome to your new app.
+Please use our warehouse automation for products, orders and Customer handling.
+<br />
+<br />
+<img src="/images/OrderProcess.png" height="300" alt="Order processing image." />
 
-<SurveyPrompt Title="How is Blazor working for you?" />
