Encapsulation, data annotations

--- a/AutomateWarehouse/Pages/Index.razor
+++ b/AutomateWarehouse/Pages/Index.razor
@@ -2,7 +2,7 @@
 
 <h1>Warehouse Automation</h1>
 
-Please use our warehouse automation for products, orders and Customer handling.
+Please use our warehouse automation for Products, Orders and Customer handling.
 <br />
 <br />
 <img src="/images/OrderProcess.png" height="300" alt="Order processing image." />
