--- a/AutomateWarehouse/Shared/NavMenu.razor
+++ b/AutomateWarehouse/Shared/NavMenu.razor
@@ -19,7 +19,7 @@
     </li>
     <li class="nav-item px-3">
       <NavLink class="nav-link" href="allCustomers">
-        <span class="oi oi-plus" aria-hidden="true"></span> Customer
+        <span class="oi oi-plus" aria-hidden="true"></span> Customers
       </NavLink>
     </li>
 
