--- a/AutomateWarehouse/Pages/Orders.razor
+++ b/AutomateWarehouse/Pages/Orders.razor
@@ -223,66 +223,7 @@
                 }
             }
         </tbody>
-    </table>
-
-    <button class="btn btn-info" @onclick="(() => GetAllOrdersAsync())">Show all orders</button>
-    <button class="btn btn-info" @onclick="(() => GetAllDispatchedOrdersAsync())">Show all dispatched orders</button>
-    <button class="btn btn-info" @onclick="(() => GetAllPendingdOrdersAsync())">Show all pending orders</button>
-    <button class="btn btn-info" @onclick="(() => DispatchAllOrders())">Process all orders</button>
-    <div class="row m-2">
-            <div class="col-5 bg-light m-2 justify-content-start">
-                <div class="p-3 mb-3 bg-secondary text-white text-center">
-                    Create new Order
-                </div>
-                <EditForm Model="@newOrder" OnValidSubmit="(() => AddNewOrder())">
-                    <DataAnnotationsValidator />
-                    <ValidationSummary />
-                    <div class="form-group">
-                        @*Binder respektive värde nedanför till objektet updateOrder*@
-                        <label for="ord">Pick customer</label>
-                        <select type="type" id="ord" class="form-control select-picker" @bind="@newOrder.CustomerId">
-                            @foreach (var cust in customers)
-                            {
-                                <option value="@cust.Id">@cust.Name</option>
-                            }
-                        </select>
-                        <br>
-                        <label for="address">Delivery address</label>
-                        <input type="type" id="address" class="form-control" @bind-value="@newOrder.DeliveryAddress" />
-                        <br>
-                        <button class="btn btn-info" type="submit">
-                            Add Order
-                        </button>
-                    </div>
-                </EditForm>
-            </div>
-        <div class="col-5 bg-light m-2 justify-content-start">
-            <div class="p-3 mb-3 bg-secondary text-white text-center">
-                Edit Order
-            </div>
-            <EditForm Model="@updateOrder" OnValidSubmit="(() => EditOrder())">
-                <DataAnnotationsValidator />
-                <ValidationSummary />
-                <div class="form-group">
-                    @*Binder respektive värde nedanför till objektet updateOrder*@
-                    <label for="deliveryAddress">Delivery address</label>
-                    <input type="type" id="deliveryAddress" class="form-control" @bind-value="@updateOrder.DeliveryAddress" />
-                </div>
-                <div class="text-center p-3 mb-3">
-                    <button class="btn btn-info" type="submit">Edit Customer</button>
-                </div>
-                    @if (updateOrder.PaymentCompleted)
-                    {
-                        <button class="btn btn-info" @onclick="(() => UndoPayment(updateOrder))">Undo payment</button>
-                    }
-
-                    @if (updateOrder.Dispatched)
-                    {
-                        <button class="btn btn-info" @onclick="(() => UndoDispatch(updateOrder))">Undo dispatch</button>
-                    }
-            </EditForm>
-        </div>
-    </div>
+    </table>>
 </div>
 
 
@@ -299,26 +240,25 @@
     private List<Product> ListOfProducts;
     private List<Customer> ListOfCustomers;
 
-        OrderLine newOrderLine = new OrderLine();
-        private async Task AddNewOrderLine(Order order)
-        {
-            newOrderLine.OrderId = order.Id;
-            await orderLineRepo.AddOrderLineAsync(newOrderLine);
-            newOrderLine = new OrderLine();
-        }
+    OrderLine newOrderLine = new OrderLine();
+    private async Task AddNewOrderLine(Order order)
+    {
+        newOrderLine.OrderId = order.Id;
+        await orderLineRepo.AddOrderLineAsync(newOrderLine);
+        newOrderLine = new OrderLine();
+    }
 
-        //private async Task AddNewProduct(Order order)
-        //{
-        //    updateOrder = order;
+    //private async Task AddNewProduct(Order order)
+    //{
+    //    updateOrder = order;
 
-        //    await orderLineRepo.AddOrderLineAsync(newOrderLine);
-        //    newOrderLine = new OrderLine();
-        //}
-        Order newOrder = new Order();
-        Order updateOrder = new Order();
-        bool checkedValue = false;
+    //    await orderLineRepo.AddOrderLineAsync(newOrderLine);
+    //    newOrderLine = new OrderLine();
+    //}
+    Order newOrder = new Order();
+    Order updateOrder = new Order();
+    bool checkedValue = false;
 
-        OrderLine newOrderLine = new OrderLine();
 
     protected override async Task OnInitializedAsync()
     {
